--- a/espresso.cabal
+++ b/espresso.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Barista
                      , Constants
+                     , Data
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , scotty
@@ -25,9 +26,11 @@ library
                      , transformers
                      , text
                      , resource-pool
+                     , containers
   default-extensions:  OverloadedStrings
                      , QuasiQuotes
                      , DeriveGeneric
+                     , RecordWildCards
   default-language:    Haskell2010
 
 
@@ -49,6 +52,7 @@ test-suite espresso-test
                      , hspec-wai
                      , hspec-wai-json
                      , aeson
+                     , containers
   default-extensions:  OverloadedStrings
                      , QuasiQuotes
   ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
