--- a/espresso.cabal
+++ b/espresso.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Barista
                      , Constants
                      , Data
+                     , Utils
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , scotty
