Use bytestring instead of text, since we're storing byte arrays now

--- a/espresso.cabal
+++ b/espresso.cabal
@@ -27,6 +27,7 @@ library
                      , text
                      , resource-pool
                      , containers
+                     , bytestring
                      , unix
   default-extensions:  OverloadedStrings
                      , QuasiQuotes
