Include lazy bytestring bitwise ops, decompress

--- a/espresso.cabal
+++ b/espresso.cabal
@@ -28,6 +28,8 @@ library
                      , resource-pool
                      , containers
                      , bytestring
+                     , bits-bytestring-lazy
+                     , zlib
                      , unix
   default-extensions:  OverloadedStrings
                      , QuasiQuotes
